github_data_collector/src/data/issue_comment/Jupyter-contrib_jupyter_nbextensions_configurator.txt
I tried to install jupyter_contrib_nbextensions according to the steps introduced in the official website https://jupyter-contrib-nbextensions.readthedocs.io/en/latest/install.html

I finished the first step "Install the python package". And When I proceeded to the second step, an error was reported.

jupyter contrib nbextension install --user

  File "<ipython-input-2-1c0e089b301b>", line 1
    jupyter contrib nbextension install --user
                  ^
SyntaxError: invalid syntax
This PR could close issue #108. Don't know, if this a good solution, but it is at least working for me without issues (as far as I can see).
Would be great to have this fix in the next release of the configurator, as I just added a number of custom keybindings to a jupyter extension...
Looking forward to hear your feedback on this matter.
Hi,
I have encountered an issue regarding the definition of multiple hotkeys in one project. I can define the first hotkey, but all further hotkeys I want to change, modify the first one again instead....
I have already spotted the problem in the code and I will send you a PR with a proposal to fix this.
Is there a way for us to create extensions that are not-visible and not-disableable through the extensions tab?

Also, we want our extensions to actually remove functionality from Jupyter Notebook.

As a hypothetical example.:

1. We want to have a legal popup displayed for a particular notebook that is pre-populated.
2. The user cannot "Hide" the legal popup by disabling the popup extension. (Of course we could prevent the user from accepting in this circumstance by having the legal popup hit a controller, but let's just ignore that fact for the sake of this example)

Can all this be achieved using a notebook extension to disable it or is it mandatory for us to disable it via code (Thereby making updating versions of our notebook setup hard-ish since we have to merge changes. Of course, we forked jupyter notebook so it shouldn't be that hard to change in the future).

Also, please advise if this is not the ideal channel for posting general questions?
Sometimes when I use Table of Contents (2), content does not appear in the IPython file. He will appear the last yellow warning in the picture.
<img width="571" alt="屏幕快照 2019-10-14 下午10 49 47" src="https://user-images.githubusercontent.com/41815560/66760909-91055000-eed5-11e9-8358-c8cad2b4ea43.png">

With this change, the conda recipe for the package no longer needs to rely on pre/post link/unlink scripts.
I'm using latest version of Anaconda 3 (python 3.7.1), and followed setup steps for jupyter nbextensions and nbextensions_configurator.
Tried both ways on different machines (using conda install and installing directly by pip)

No matter what I try, the configurator tab show all extensions as "incompatible". Although I can disable the checkbox, and select the extensions that I want (and they're working correctly), I'd like to understand if there's anything going on that I should fix.

I've checked .yaml files of some extensions, and most (if not all) are compatible with 4.x and 5.x versions of Jupyter. 

![image](https://user-images.githubusercontent.com/487779/65141207-86df5700-d9e6-11e9-926b-e382cfe09195.png)


Other packages versions that might be of help.

```
jupyter (1.0.0)                               
  INSTALLED: 1.0.0 (latest)
jupyter-core (4.5.0)                          
  INSTALLED: 4.5.0 (latest)
jupyter-client (5.3.3)                        
  INSTALLED: 5.3.1
  LATEST:    5.3.3
jupyter-contrib-nbextensions (0.5.1)         
  INSTALLED: 0.5.1 (latest)

```
![image](https://user-images.githubusercontent.com/487779/65140699-809cab00-d9e5-11e9-9126-e0a58bb07f9b.png)

I'm trying to install NbConfigurator in jupyterhub so my users can enable their own custom extensions.
I have gotten it working fine.
I installed `jupyter-contrib-nbextensions` which got a bunch of extensions installed for me when I ran:
```
    jupyter contrib nbextension install --sys-prefix
    jupyter nbextensions_configurator enable --sys-prefix
```

There are some extensions I do not want users to be able to use. Quick example being:
 - "Exercise" - Not relevant to us
 - GistIt - It's in a private VPN where Github access is not possible

I'm now trying to figure out how can I blacklist some extensions so that my users cannot enable those and they just don't show up in the Configurator ?


Also, can I auto-enable some extensions - like Code Folding, etc
Feature Request: An extension enabling click-and-drag to rearrange the order of cells in a notebook. The [nteract](https://nteract.io/) notebook has this feature by default. Perhaps it's as easy as porting their code? 

Not sure if I'm posting this in the right place. Thanks for your great work! I use it every day, and it dramatically improves Jupyter notebook ergonomics.
Thanks for this awesome tool, I am using JupyterHub which is a multi user Jupyter, installed the extension accordingly but the new tab doesn't show up here.

What I did:
conda install -c conda-forge jupyter_contrib_nbextensions

What I see when I am in JupyterHub (as usual):
https://192.168.100.180/user/jdoe/tree#nbextensions_configurator

Files, Running, Clusters

Thank you very much.